...
    case all, movies, shows

    var id: Self { self }
    var title: String {
        switch self {
        case .all: String(localized: "All")
        case .movies: String(localized: "Movies")
        case .shows: String(localized: "Shows")
        }
    }
    var includeTypes: [MediaItemType] {
        switch self {
        case .all: [.movie, .series]
        case .movies: [.movie]
...
